# memory_allocator

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: aliasing.h  allocator_utility.h  free_list.h  free_list_node.h  header.h
lib/src/: allocator_utility.cc  free_list.cc  main.cc
test/: CMakeLists.txt
